--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Super Wars</title>
-    <link rel="stylesheet" href="src/style.css">
-</head>
+    <link rel="stylesheet" href="./src/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="arena">
-        <div id="heroes" class="team">
-        </div>
-        <div id="score">
-            5 - 0
-        </div>
-        <div id="villains" class="team">
-
-
-        </div>
+      <div id="heroes" class="team"></div>
+      <div id="score">5 - 0</div>
+      <div id="villains" class="team"></div>
     </div>
-    <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
-</body>
-<script src="src/app.js"></script>
-
+    <footer class="footer">
+      Made with <img src="/images/Vector.svg" /> by ProGrad
+    </footer>
+  </body>
+  <script src="src/app.js"></script>
 </html>
